testdata/baselines/reference/tests_cases_conformance_jsdoc_jsdocIndexSignature.ts.ast
SourceFile
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' o1'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' o2'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' o3'
  FunctionDeclaration
    Identifier: ' f'
    Parameter
      Identifier: 'o'
    Block
      ExpressionStatement
        BinaryExpression
          PropertyAccessExpression
            Identifier: '
    o'
            Identifier: 'foo'
          EqualsToken
          NumericLiteral
      ExpressionStatement
        BinaryExpression
          PropertyAccessExpression
            Identifier: ' // error
    o'
            Identifier: 'bar'
          EqualsToken
          FalseKeyword
